# DataTraceX

./: .env.example  .gitignore  GOAL.md  README.md  compose.yml  deep-research-report.md  pyproject.toml
docs/: data-model.md  dataarts-ingestion.md  dependencies.md  e2e-validation.md  technical-design.md  unmanned-vibe-coding-goal-plan.md
infra/neo4j/: schema.cypher
infra/postgres/init/: 001_schema.sql
infra/postgres/migrations/: 002_lineage_core_upgrade.sql  003_ai_review.sql
scripts/: analyze_dataarts_scripts_with_ai.py  check_dependencies.py  demo_ai_review_flow.py  derive_dataarts_lineage.py  derive_dataarts_script_lineage.py  ingest_dataarts_jobs.py  ingest_dataarts_scripts.py  init_neo4j_schema.py  probe_dataarts_scripts.py  project_to_neo4j.py  start_web.py
src/datatracex/: __init__.py  cli.py  demo.py  dependencies.py  http_api.py  models.py  neo4j_projector.py  postgres_store.py  raw.py  settings.py  sqlite_store.py  store.py  urn.py  web_app.py
src/datatracex/ai/: __init__.py  chunker.py  lineage_analyzer.py  provider.py  redaction.py  repository.py
src/datatracex/collectors/: __init__.py  base.py  dataarts.py
src/datatracex/huawei/: __init__.py  client.py  dataarts.py  signing.py
src/datatracex/ingest/: __init__.py  dataarts_jobs.py  dataarts_scripts.py
src/datatracex/parsers/: __init__.py  base.py  dataarts_node.py  sql_script.py
src/datatracex/review/: __init__.py  api.py  (+1 more)
tests/: test_ai_workflow.py  test_dataarts_scripts.py  test_demo_store.py  test_postgres_store.py  test_settings.py  test_sql_script_parser.py  test_urn.py
